[package]
name = "pc_assist"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process-memory = "0.3.0"
winapi = { version = "0.3", features = ["tlhelp32"] }