[package]
name = "pc_assist"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process-memory = "0.3.0"
winapi = { version = "0.3", features = ["tlhelp32", "winuser"] }
pcf = { git = "https://github.com/MinusKelvin/pcf", rev = "12337b018d416e23d9d696ba9f9cb9187016b6fd" }
game-util = { git = "https://github.com/MinusKelvin/game-util-rs", rev = "558fd0555a30f1acf46c440790b5ccbc1ade8e92" }
enumset = "0.4.0"
regex = "0.1"

[build-dependencies]
build-utils = { git = "https://github.com/MinusKelvin/game-util-rs", rev = "558fd05" }
